--- a/Swift_CustomApp/Base.lproj/Main.storyboard
+++ b/Swift_CustomApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="spE-iL-4Y6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mVJ-AC-Ggt">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -147,13 +147,7 @@
                             <outlet property="delegate" destination="YKD-MT-2Vs" id="EVR-Hf-YmD"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Friends" id="fz9-8y-bYl">
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="plus" catalog="system" id="HcC-VB-nVJ">
-                            <connections>
-                                <action selector="addFriend:" destination="YKD-MT-2Vs" id="7IV-Cz-ewr"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Friends" id="fz9-8y-bYl"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZpE-E9-782" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="hL3-ra-waN" userLabel="Exit" sceneMemberID="exit"/>
@@ -163,13 +157,13 @@
         <!--Communities-->
         <scene sceneID="usC-zL-I64">
             <objects>
-                <tableViewController id="FHR-Jj-haw" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="UserCommunitiesTableView" id="FHR-Jj-haw" customClass="UserCommunitiesTableViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="fkv-4k-lPh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="zAE-Uy-KWe">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommunityCell" id="zAE-Uy-KWe" customClass="CommunitiesTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zAE-Uy-KWe" id="vTr-d2-g4L">
@@ -184,7 +178,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Communities" id="1eC-9w-YGT">
-                        <barButtonItem key="rightBarButtonItem" title="Recommended" image="star.fill" catalog="system" id="sBN-Ng-RNT">
+                        <barButtonItem key="rightBarButtonItem" title="Recommended" image="plus" catalog="system" id="sBN-Ng-RNT">
                             <connections>
                                 <segue destination="yHi-8h-1SC" kind="show" id="ZMD-Zv-F7D"/>
                             </connections>
@@ -198,13 +192,13 @@
         <!--Recommended-->
         <scene sceneID="dNw-62-8hR">
             <objects>
-                <tableViewController id="yHi-8h-1SC" sceneMemberID="viewController">
+                <tableViewController id="yHi-8h-1SC" customClass="GlobalCommunitiesTableViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="X17-QQ-tZ9">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="GAV-9N-EYC">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommunityCell" id="GAV-9N-EYC" customClass="CommunitiesTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GAV-9N-EYC" id="GUD-74-wcD">
@@ -244,10 +238,10 @@
             </objects>
             <point key="canvasLocation" x="2490" y="978"/>
         </scene>
-        <!--Avatar Collection View Controller-->
+        <!--Friend Collection View Controller-->
         <scene sceneID="fzJ-vu-FhG">
             <objects>
-                <collectionViewController storyboardIdentifier="FriendCollectionView" id="vff-bu-WFk" customClass="AvatarCollectionViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="FriendCollectionView" id="vff-bu-WFk" customClass="FriendCollectionViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="hs0-Yb-i7M">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -335,7 +329,6 @@
         <image name="person.2.fill" catalog="system" width="128" height="80"/>
         <image name="person.3.fill" catalog="system" width="128" height="61"/>
         <image name="plus" catalog="system" width="128" height="113"/>
-        <image name="star.fill" catalog="system" width="128" height="116"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
