--- a/Cells/CommunitiesTableViewCell.xib
+++ b/Cells/CommunitiesTableViewCell.xib
@@ -9,36 +9,36 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FriendsTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CommunitiesTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mza-js-5Yd">
-                        <rect key="frame" x="50" y="12" width="42" height="21"/>
-                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gix-PB-fP1">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jeF-H2-z67">
                         <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWM-f8-do9">
+                        <rect key="frame" x="50" y="12" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="mza-js-5Yd" secondAttribute="bottom" constant="11" id="5ES-A8-GOr"/>
-                    <constraint firstItem="mza-js-5Yd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="nAj-z0-BZ7"/>
-                    <constraint firstItem="mza-js-5Yd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="nav-N8-XPQ"/>
+                    <constraint firstAttribute="bottom" secondItem="eWM-f8-do9" secondAttribute="bottom" constant="11" id="KlS-02-52e"/>
+                    <constraint firstItem="eWM-f8-do9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="sOH-3L-6FS"/>
+                    <constraint firstItem="eWM-f8-do9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="wUN-FE-Iok"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="fullNameLabel" destination="mza-js-5Yd" id="rJ1-8w-XGE"/>
-                <outlet property="photoImageView" destination="Gix-PB-fP1" id="OcU-NY-tVI"/>
+                <outlet property="fullNameLabel" destination="eWM-f8-do9" id="dUv-q8-dMt"/>
+                <outlet property="photoImageView" destination="jeF-H2-z67" id="dbt-pc-ZcP"/>
             </connections>
-            <point key="canvasLocation" x="79.710144927536234" y="78.348214285714278"/>
+            <point key="canvasLocation" x="-146" y="87"/>
         </tableViewCell>
     </objects>
 </document>
