--- a/Cells/FriendsTableViewCell.xib
+++ b/Cells/FriendsTableViewCell.xib
@@ -17,19 +17,24 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mza-js-5Yd">
-                        <rect key="frame" x="50" y="12" width="42" height="21"/>
+                        <rect key="frame" x="10" y="12" width="42" height="21"/>
                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gix-PB-fP1">
-                        <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gix-PB-fP1">
+                        <rect key="frame" x="266" y="0.0" width="44" height="44"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="44" id="RNB-27-CuB"/>
+                            <constraint firstAttribute="width" constant="44" id="rcP-8S-gZo"/>
+                        </constraints>
+                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                     </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="mza-js-5Yd" secondAttribute="bottom" constant="11" id="5ES-A8-GOr"/>
-                    <constraint firstItem="mza-js-5Yd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="nAj-z0-BZ7"/>
+                    <constraint firstAttribute="trailing" secondItem="Gix-PB-fP1" secondAttribute="trailing" constant="10" id="ci6-qg-S6H"/>
+                    <constraint firstItem="mza-js-5Yd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="nAj-z0-BZ7"/>
                     <constraint firstItem="mza-js-5Yd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="nav-N8-XPQ"/>
                 </constraints>
             </tableViewCellContentView>
