--- a/Cells/FriendCollectionViewCell.xib
+++ b/Cells/FriendCollectionViewCell.xib
@@ -4,48 +4,56 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AvatarCell" id="gTV-IL-0wX" customClass="FriendCollectionViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="230" height="300"/>
+            <rect key="frame" x="0.0" y="0.0" width="170" height="210"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="230" height="300"/>
+                <rect key="frame" x="0.0" y="0.0" width="170" height="210"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X8U-dF-n3N">
-                        <rect key="frame" x="0.0" y="0.0" width="230" height="189"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X8U-dF-n3N">
+                        <rect key="frame" x="10" y="10" width="150" height="150"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="150" id="Jy5-Lb-Lnt"/>
+                            <constraint firstAttribute="height" constant="150" id="iJa-Mh-XkP"/>
+                        </constraints>
                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idw-6a-Ft3">
-                        <rect key="frame" x="10" y="204" width="210" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="teI-LP-Ljh" customClass="LikeControl" customModule="Swift_CustomApp" customModuleProvider="target">
+                        <rect key="frame" x="20" y="170" width="130" height="30"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="Rwr-Xl-WX9"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="X8U-dF-n3N" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9UJ-gr-kM2"/>
-                <constraint firstItem="X8U-dF-n3N" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="9q9-Dv-MXS"/>
-                <constraint firstItem="idw-6a-Ft3" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="BF7-LJ-8c1"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="bottom" secondItem="idw-6a-Ft3" secondAttribute="bottom" constant="75" id="BoA-b9-c52"/>
-                <constraint firstItem="X8U-dF-n3N" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" id="EAp-Vu-C6L"/>
-                <constraint firstItem="idw-6a-Ft3" firstAttribute="top" secondItem="X8U-dF-n3N" secondAttribute="bottom" constant="15" id="Her-w3-c14"/>
-                <constraint firstAttribute="trailing" secondItem="X8U-dF-n3N" secondAttribute="trailing" id="J2Q-sc-zW9"/>
-                <constraint firstItem="idw-6a-Ft3" firstAttribute="top" secondItem="X8U-dF-n3N" secondAttribute="bottom" constant="15" id="bl4-WJ-ut5"/>
-                <constraint firstAttribute="trailing" secondItem="idw-6a-Ft3" secondAttribute="trailing" constant="10" id="dmr-ib-6QP"/>
+                <constraint firstItem="X8U-dF-n3N" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="1g8-f3-F20"/>
+                <constraint firstAttribute="trailing" secondItem="teI-LP-Ljh" secondAttribute="trailing" constant="20" id="7dx-Xh-kio"/>
+                <constraint firstAttribute="bottom" secondItem="teI-LP-Ljh" secondAttribute="bottom" constant="10" id="Fcd-Iv-Gpe"/>
+                <constraint firstItem="teI-LP-Ljh" firstAttribute="top" secondItem="X8U-dF-n3N" secondAttribute="bottom" constant="10" id="NFA-hT-Oj7"/>
+                <constraint firstAttribute="trailing" secondItem="X8U-dF-n3N" secondAttribute="trailing" constant="10" id="Rxz-9p-sio"/>
+                <constraint firstItem="teI-LP-Ljh" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="Tqu-rj-4p8"/>
+                <constraint firstItem="X8U-dF-n3N" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="XLf-EE-ezj"/>
             </constraints>
-            <size key="customSize" width="309" height="231"/>
+            <size key="customSize" width="249" height="241"/>
             <connections>
-                <outlet property="fullNameLabel" destination="idw-6a-Ft3" id="1Br-Lh-gjL"/>
                 <outlet property="photoImageView" destination="X8U-dF-n3N" id="YIj-ay-3xW"/>
             </connections>
-            <point key="canvasLocation" x="267.39130434782612" y="138.95089285714286"/>
+            <point key="canvasLocation" x="-523" y="25"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
