--- a/Cells/FriendsTableViewCell.xib
+++ b/Cells/FriendsTableViewCell.xib
@@ -10,38 +10,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FriendsTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="69" id="KGk-i7-Jjw" customClass="FriendsTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5t4-gC-YCV" customClass="AvatarView" customModule="Swift_CustomApp" customModuleProvider="target">
+                        <rect key="frame" x="271" y="5" width="44" height="44"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gix-PB-fP1">
+                                <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="44" id="9fg-D7-abQ"/>
+                            <constraint firstAttribute="height" constant="44" id="K9l-xz-Jdq"/>
+                            <constraint firstItem="Gix-PB-fP1" firstAttribute="height" secondItem="5t4-gC-YCV" secondAttribute="height" id="V9p-rx-PwH"/>
+                            <constraint firstItem="Gix-PB-fP1" firstAttribute="width" secondItem="5t4-gC-YCV" secondAttribute="width" id="xog-Jy-IqC"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mza-js-5Yd">
-                        <rect key="frame" x="10" y="12" width="42" height="21"/>
+                        <rect key="frame" x="10" y="10" width="251" height="34"/>
                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gix-PB-fP1">
-                        <rect key="frame" x="266" y="0.0" width="44" height="44"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="44" id="RNB-27-CuB"/>
-                            <constraint firstAttribute="width" constant="44" id="rcP-8S-gZo"/>
-                        </constraints>
-                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
-                    </imageView>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5t4-gC-YCV" customClass="AvatarView" customModule="Swift_CustomApp" customModuleProvider="target">
-                        <rect key="frame" x="221" y="0.0" width="44" height="44"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="mza-js-5Yd" secondAttribute="bottom" constant="11" id="5ES-A8-GOr"/>
-                    <constraint firstAttribute="trailing" secondItem="Gix-PB-fP1" secondAttribute="trailing" constant="10" id="ci6-qg-S6H"/>
-                    <constraint firstItem="mza-js-5Yd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="nAj-z0-BZ7"/>
-                    <constraint firstItem="mza-js-5Yd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="nav-N8-XPQ"/>
+                    <constraint firstItem="mza-js-5Yd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="DER-AG-P4G"/>
+                    <constraint firstAttribute="trailing" secondItem="5t4-gC-YCV" secondAttribute="trailing" constant="5" id="MNs-fa-O8f"/>
+                    <constraint firstItem="5t4-gC-YCV" firstAttribute="leading" secondItem="mza-js-5Yd" secondAttribute="trailing" constant="10" id="NlQ-7c-cue"/>
+                    <constraint firstAttribute="bottom" secondItem="5t4-gC-YCV" secondAttribute="bottom" constant="5" id="W9Z-La-31N"/>
+                    <constraint firstAttribute="bottom" secondItem="mza-js-5Yd" secondAttribute="bottom" constant="10" id="cBU-I4-ZaO"/>
+                    <constraint firstItem="5t4-gC-YCV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="jum-sl-0Ml"/>
+                    <constraint firstItem="mza-js-5Yd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="mIv-lM-Hnn"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -49,7 +55,7 @@
                 <outlet property="fullNameLabel" destination="mza-js-5Yd" id="rJ1-8w-XGE"/>
                 <outlet property="photoImageView" destination="Gix-PB-fP1" id="OcU-NY-tVI"/>
             </connections>
-            <point key="canvasLocation" x="79.710144927536234" y="78.348214285714278"/>
+            <point key="canvasLocation" x="79.710144927536234" y="86.71875"/>
         </tableViewCell>
     </objects>
     <resources>
