Add shadow, fix some constraints

--- a/Cells/FriendCollectionViewCell.xib
+++ b/Cells/FriendCollectionViewCell.xib
@@ -11,10 +11,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AvatarCell" id="gTV-IL-0wX" customClass="FriendCollectionViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="170" height="210"/>
+            <rect key="frame" x="0.0" y="0.0" width="170" height="220"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="170" height="210"/>
+                <rect key="frame" x="0.0" y="0.0" width="170" height="220"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X8U-dF-n3N">
@@ -26,29 +26,29 @@
                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="teI-LP-Ljh" customClass="LikeControl" customModule="Swift_CustomApp" customModuleProvider="target">
-                        <rect key="frame" x="20" y="170" width="130" height="30"/>
+                        <rect key="frame" x="20" y="170" width="130" height="40"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="Rwr-Xl-WX9"/>
+                            <constraint firstAttribute="height" constant="40" id="VGZ-Su-f45"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="X8U-dF-n3N" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="1g8-f3-F20"/>
-                <constraint firstAttribute="trailing" secondItem="teI-LP-Ljh" secondAttribute="trailing" constant="20" id="7dx-Xh-kio"/>
-                <constraint firstAttribute="bottom" secondItem="teI-LP-Ljh" secondAttribute="bottom" constant="10" id="Fcd-Iv-Gpe"/>
-                <constraint firstItem="teI-LP-Ljh" firstAttribute="top" secondItem="X8U-dF-n3N" secondAttribute="bottom" constant="10" id="NFA-hT-Oj7"/>
-                <constraint firstAttribute="trailing" secondItem="X8U-dF-n3N" secondAttribute="trailing" constant="10" id="Rxz-9p-sio"/>
-                <constraint firstItem="teI-LP-Ljh" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="Tqu-rj-4p8"/>
-                <constraint firstItem="X8U-dF-n3N" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="XLf-EE-ezj"/>
+                <constraint firstAttribute="bottom" secondItem="teI-LP-Ljh" secondAttribute="bottom" constant="10" id="Rux-3W-oY8"/>
+                <constraint firstItem="X8U-dF-n3N" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="avn-Ek-AqN"/>
+                <constraint firstItem="teI-LP-Ljh" firstAttribute="top" secondItem="X8U-dF-n3N" secondAttribute="bottom" constant="10" id="eXk-V9-w7K"/>
+                <constraint firstItem="X8U-dF-n3N" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="kP7-OF-aLd"/>
+                <constraint firstItem="teI-LP-Ljh" firstAttribute="width" secondItem="X8U-dF-n3N" secondAttribute="width" multiplier="0.866667" id="nac-Xz-GJd"/>
+                <constraint firstItem="teI-LP-Ljh" firstAttribute="centerX" secondItem="X8U-dF-n3N" secondAttribute="centerX" id="wpb-iu-nB3"/>
+                <constraint firstAttribute="trailing" secondItem="X8U-dF-n3N" secondAttribute="trailing" constant="10" id="ySB-vN-bJ9"/>
             </constraints>
-            <size key="customSize" width="249" height="241"/>
+            <size key="customSize" width="249" height="269"/>
             <connections>
                 <outlet property="photoImageView" destination="X8U-dF-n3N" id="YIj-ay-3xW"/>
             </connections>
-            <point key="canvasLocation" x="-523" y="25"/>
+            <point key="canvasLocation" x="-523.1884057971015" y="34.151785714285715"/>
         </collectionViewCell>
     </objects>
     <resources>
