--- a/Cells/CommunitiesTableViewCell.xib
+++ b/Cells/CommunitiesTableViewCell.xib
@@ -10,27 +10,33 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CommunitiesTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jeF-H2-z67">
-                        <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jeF-H2-z67">
+                        <rect key="frame" x="10" y="10" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="GKw-6G-vsr"/>
+                            <constraint firstAttribute="width" constant="50" id="Imo-PL-nai"/>
+                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWM-f8-do9">
-                        <rect key="frame" x="50" y="12" width="42" height="21"/>
+                        <rect key="frame" x="80" y="25" width="230" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="eWM-f8-do9" secondAttribute="bottom" constant="11" id="KlS-02-52e"/>
-                    <constraint firstItem="eWM-f8-do9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="sOH-3L-6FS"/>
-                    <constraint firstItem="eWM-f8-do9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="wUN-FE-Iok"/>
+                    <constraint firstAttribute="bottom" secondItem="jeF-H2-z67" secondAttribute="bottom" constant="10" id="BdT-TX-2e2"/>
+                    <constraint firstItem="jeF-H2-z67" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Etp-oZ-xEs"/>
+                    <constraint firstAttribute="trailing" secondItem="eWM-f8-do9" secondAttribute="trailing" constant="10" id="hL3-ya-OUY"/>
+                    <constraint firstItem="eWM-f8-do9" firstAttribute="centerY" secondItem="jeF-H2-z67" secondAttribute="centerY" id="ixV-Ly-sx9"/>
+                    <constraint firstItem="jeF-H2-z67" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="jks-0g-I26"/>
+                    <constraint firstItem="eWM-f8-do9" firstAttribute="leading" secondItem="jeF-H2-z67" secondAttribute="trailing" constant="20" id="zZu-hy-NOe"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -38,7 +44,7 @@
                 <outlet property="fullNameLabel" destination="eWM-f8-do9" id="dUv-q8-dMt"/>
                 <outlet property="photoImageView" destination="jeF-H2-z67" id="dbt-pc-ZcP"/>
             </connections>
-            <point key="canvasLocation" x="-146" y="87"/>
+            <point key="canvasLocation" x="-146.37681159420291" y="86.383928571428569"/>
         </tableViewCell>
     </objects>
 </document>
