--- a/Cells/FriendsTableViewCell.xib
+++ b/Cells/FriendsTableViewCell.xib
@@ -10,52 +10,64 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="69" id="KGk-i7-Jjw" customClass="FriendsTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="140" id="KGk-i7-Jjw" customClass="FriendsTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5t4-gC-YCV" customClass="AvatarView" customModule="Swift_CustomApp" customModuleProvider="target">
-                        <rect key="frame" x="271" y="5" width="44" height="44"/>
+                        <rect key="frame" x="10" y="10" width="50" height="50"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gix-PB-fP1">
-                                <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gix-PB-fP1">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="44" id="9fg-D7-abQ"/>
-                            <constraint firstAttribute="height" constant="44" id="K9l-xz-Jdq"/>
-                            <constraint firstItem="Gix-PB-fP1" firstAttribute="height" secondItem="5t4-gC-YCV" secondAttribute="height" id="V9p-rx-PwH"/>
-                            <constraint firstItem="Gix-PB-fP1" firstAttribute="width" secondItem="5t4-gC-YCV" secondAttribute="width" id="xog-Jy-IqC"/>
+                            <constraint firstAttribute="height" constant="50" id="Bdv-8Y-HQ1"/>
+                            <constraint firstAttribute="width" constant="50" id="FrV-Xa-TJv"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                <size key="value" width="5" height="7"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="25"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <outlet property="photoImageView" destination="Gix-PB-fP1" id="Ash-3p-6CM"/>
+                        </connections>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mza-js-5Yd">
-                        <rect key="frame" x="10" y="10" width="251" height="34"/>
-                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zKZ-bf-U96">
+                        <rect key="frame" x="80" y="24.5" width="230" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="mza-js-5Yd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="DER-AG-P4G"/>
-                    <constraint firstAttribute="trailing" secondItem="5t4-gC-YCV" secondAttribute="trailing" constant="5" id="MNs-fa-O8f"/>
-                    <constraint firstItem="5t4-gC-YCV" firstAttribute="leading" secondItem="mza-js-5Yd" secondAttribute="trailing" constant="10" id="NlQ-7c-cue"/>
-                    <constraint firstAttribute="bottom" secondItem="5t4-gC-YCV" secondAttribute="bottom" constant="5" id="W9Z-La-31N"/>
-                    <constraint firstAttribute="bottom" secondItem="mza-js-5Yd" secondAttribute="bottom" constant="10" id="cBU-I4-ZaO"/>
-                    <constraint firstItem="5t4-gC-YCV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="jum-sl-0Ml"/>
-                    <constraint firstItem="mza-js-5Yd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="mIv-lM-Hnn"/>
+                    <constraint firstItem="5t4-gC-YCV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="a14-mX-x1N"/>
+                    <constraint firstAttribute="trailing" secondItem="zKZ-bf-U96" secondAttribute="trailing" constant="10" id="gDE-fS-auS"/>
+                    <constraint firstItem="5t4-gC-YCV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="gdZ-LP-6Mq"/>
+                    <constraint firstItem="zKZ-bf-U96" firstAttribute="leading" secondItem="5t4-gC-YCV" secondAttribute="trailing" constant="20" id="iVD-Cj-9TU"/>
+                    <constraint firstAttribute="bottom" secondItem="5t4-gC-YCV" secondAttribute="bottom" constant="10" id="rBI-Yt-gZG"/>
+                    <constraint firstItem="zKZ-bf-U96" firstAttribute="centerY" secondItem="5t4-gC-YCV" secondAttribute="centerY" id="vZz-uE-xKq"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="fullNameLabel" destination="mza-js-5Yd" id="rJ1-8w-XGE"/>
-                <outlet property="photoImageView" destination="Gix-PB-fP1" id="OcU-NY-tVI"/>
+                <outlet property="fullNameLabel" destination="zKZ-bf-U96" id="rcS-aR-inV"/>
+                <outlet property="photoView" destination="5t4-gC-YCV" id="9eG-8g-q5a"/>
             </connections>
-            <point key="canvasLocation" x="79.710144927536234" y="86.71875"/>
+            <point key="canvasLocation" x="-4572.463768115942" y="87.053571428571431"/>
         </tableViewCell>
     </objects>
     <resources>
