--- a/Swift_CustomApp/Base.lproj/Main.storyboard
+++ b/Swift_CustomApp/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="622" y="660"/>
+            <point key="canvasLocation" x="621.73913043478262" y="659.59821428571422"/>
         </scene>
         <!--Friends-->
         <scene sceneID="nsg-R5-4j5">
